@@ -130,12 +130,18 @@ public class BlockJoinFacetDistribTest extends SolrCloudTestCase{
 
     // to parent query
     final String childQueryClause = "COLOR_s:("+(matchingColors.toString().replaceAll("[,\\[\\]]", " "))+")";
+      final boolean oldFacetsEnabled = random().nextBoolean();
       QueryResponse results = query("q", "{!parent which=\"type_s:parent\"}"+childQueryClause,
-          "facet", random().nextBoolean() ? "true":"false",
+          "facet", oldFacetsEnabled ? "true":"false", // try to enforce multiple phases
+              oldFacetsEnabled ? "facet.field" : "ignore" , "BRAND_s",
+              oldFacetsEnabled&&usually() ? "facet.limit" : "ignore" , "1",
+              oldFacetsEnabled&&usually() ? "facet.mincount" : "ignore" , "2",
+              oldFacetsEnabled&&usually() ? "facet.overrequest.count" : "ignore" , "0",
           "qt",  random().nextBoolean() ? "blockJoinDocSetFacetRH" : "blockJoinFacetRH",
           "child.facet.field", "COLOR_s",
           "child.facet.field", "SIZE_s",
-          "rows","0" // we care only abt results 
+          "distrib.singlePass", random().nextBoolean() ? "true":"false",
+          "rows", random().nextBoolean() ? "0":"10"
           );
       NamedList<Object> resultsResponse = results.getResponse();
       assertNotNull(resultsResponse);
